--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@ layout: default
             <i class="fa fa-briefcase icon_menu"></i>
         </li>
 
-        <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
+        <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog" style="margin-bottom: 48px !important;">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
         </li>
 
-        <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;"> 
+        <!--<li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;"> 
             <span class="tite-list">contact</span>
             <i class="fa fa-envelope icon_menu"></i> 
-        </li>
+        </li>-->
 
         <a href="#" id="print"><i class="fa fa-print icon_print"></i> </a>
         <a href="#" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
@@ -149,8 +149,6 @@ layout: default
 
 
 {% include /blog.html %}
-
-{% include /contact.html %}
 
 
 </div>
