--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@ layout: default
             <i class="fa fa-briefcase icon_menu"></i>
         </li>
 
-        <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog" style="margin-bottom: 96px !important;">
+        <li class="tabs-blog hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="blog">
             <span class="tite-list">blog</span>
             <i class="fa fa-bullhorn icon_menu"></i>
         </li>
 	    
-	<a href="download/Resume.pdf" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
+	<a href="download/Resume.pdf" id="downlowd"><i class="fa fa-download icon_print" style="margin-bottom: 48px !important;"></i> </a>
     </ul>
     <!-- /resp-tabs-list -->
 
