--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ layout: default
             <i class="fa fa-bullhorn icon_menu"></i>
         </li>
 	    
-	<a href="download/Resume.pdf" id="downlowd"><i class="fa fa-download icon_print" style="margin-bottom: 48px !important;"></i> </a>
+	<a href="download/Resume.pdf" id="download" target="_blank"><i class="fa fa-download icon_print"></i></a>
     </ul>
     <!-- /resp-tabs-list -->
 
