--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ layout: default
             <i class="fa fa-bullhorn icon_menu"></i>
         </li>
 	    
-	<a href="download/Resume.pdf" id="downlowd" target="_blank"><i class="fa fa-download icon_print"></i></a>
+	<a href="download/Resume.pdf" id="downlowd" target="_blank" title="Download my resume"><i class="fa fa-download icon_print"></i></a>
     </ul>
     <!-- /resp-tabs-list -->
 
