Add PicCollage Exp

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
         <!-- Profile Description -->
         <div id="profile_desc">
             <p>
-            	Seeking 2020 summer software/ML engineering internship. Had my Google team match and Wayfair DS internship offer cancelled.
+            	Seeking 2021 software/ML engineering internship/full-time opportunity.
             </p>
             
         </div>
